# react-native-fast-tflite

./: .eslintrc.js  .gitignore  CONTRIBUTING.md  README.md  app.plugin.js  package.json  react-native-fast-tflite.podspec  react-native-tflite.podspec  tsconfig.json  vision-camera-tflite.podspec
.github/: dependabot.yml
.github/workflows/: build-android.yml  build-ios.yml  validate-cpp.yml  validate-js.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: Tflite.cpp
android/src/main/java/com/tflite/: TfliteModule.java  TflitePackage.java
cpp/: JSITypedArray.cpp  JSITypedArray.h  TensorHelpers.cpp  TensorHelpers.h  TensorflowPlugin.cpp  TensorflowPlugin.h  react-native-tflite.cpp  react-native-tflite.h
cpp/jsi/: Promise.cpp  Promise.h  TypedArray.cpp  TypedArray.h
example/: .eslintrc.js  app.json  babel.config.js  metro.config.js  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/ios/TfliteExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/TfliteExample.xcodeproj/: project.pbxproj
example/ios/TfliteExample.xcworkspace/: contents.xcworkspacedata
example/ios/TfliteExampleTests/: TfliteExampleTests.m
example/src/: App.tsx
ios/: Tflite.h  Tflite.mm
ios/TensorFlowLiteC.framework/Headers/: builtin_ops.h  c_api.h  c_api_experimental.h  c_api_opaque.h  c_api_types.h  common.h  profiler.h  registration_external.h  telemetry_setting.h  types.h  xnnpack_delegate.h
ios/TensorFlowLiteCCoreML.framework/Headers/: coreml_delegate.h
ios/Tflite.xcodeproj/: project.pbxproj
lib/commonjs/: TensorflowLite.js  TensorflowLite.js.map  TensorflowModule.js  TensorflowModule.js.map  index.js  index.js.map
lib/commonjs/expo-plugin/: withCoreMLDelegate.js  withCoreMLDelegate.js.map  withFastTFLite.js  withFastTFLite.js.map
lib/module/: TensorflowLite.js  TensorflowLite.js.map  TensorflowModule.js  TensorflowModule.js.map  index.js  index.js.map
lib/module/expo-plugin/: withCoreMLDelegate.js  withCoreMLDelegate.js.map  withFastTFLite.js  withFastTFLite.js.map
lib/typescript/spec/: NativeRNTflite.d.ts  NativeRNTflite.d.ts.map
lib/typescript/src/: TensorflowLite.d.ts  TensorflowLite.d.ts.map  TensorflowModule.d.ts  TensorflowModule.d.ts.map  index.d.ts  index.d.ts.map
lib/typescript/src/__tests__/: index.test.d.ts.map
lib/typescript/src/expo-plugin/: @types.d.ts  @types.d.ts.map  withCoreMLDelegate.d.ts  withCoreMLDelegate.d.ts.map  (+2 more)
scripts/: build-tensorflow-android.sh  build-tensorflow-ios.sh  clang-format.sh  download-curl.sh
spec/: NativeRNTflite.ts
src/: TensorflowLite.ts  TensorflowModule.ts  index.ts  index.tsx
src/expo-config-plugin/: @types.ts  withCoreMLDelegate.ts  withFastTFLite.ts
src/expo-plugin/: @types.ts  withAndroidGpuLibraries.ts  withCoreMLDelegate.ts  withFastTFLite.ts
(+14 files in other folders)
